--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "@web-taxco/spa-shared-state",
-  "version": "1.0.0",
-  "main": "./dist/web-taxco-spa-shared-state.js",
+  "version": "1.0.2",
+  "main": "dist/web-taxco-spa-shared-state.js",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
+  "repository": {
+    "url": "git@github.com:AndresQZ/shared-state.git"
+  },
   "scripts": {
     "start": "webpack serve",
     "start:standalone": "webpack serve --env standalone",
@@ -22,12 +28,14 @@
     "@babel/eslint-parser": "^7.15.0",
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
+    "@babel/preset-typescript": "^7.15.0",
     "@babel/runtime": "^7.15.3",
     "babel-jest": "^27.0.6",
     "concurrently": "^6.2.1",
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-config-ts-important-stuff": "^1.1.0",
     "eslint-plugin-prettier": "^3.4.1",
     "husky": "^7.0.2",
     "identity-obj-proxy": "^3.0.0",
@@ -35,17 +43,16 @@
     "jest-cli": "^27.0.6",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
-    "webpack": "^5.51.1",
-    "webpack-merge": "^5.8.0",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.0.0",
-    "@babel/preset-typescript": "^7.15.0",
-    "eslint-config-ts-important-stuff": "^1.1.0",
+    "ts-config-single-spa": "^3.0.0",
     "typescript": "^4.3.5",
+    "webpack": "^5.51.1",
+    "webpack-cli": "^4.8.0",
     "webpack-config-single-spa-ts": "^4.0.0",
-    "ts-config-single-spa": "^3.0.0"
+    "webpack-dev-server": "^4.0.0",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@AndresQZ/spa-shared-state": "^1.0.0",
     "@types/jest": "^27.0.1",
     "@types/systemjs": "^6.1.1",
     "@types/webpack-env": "^1.16.2",
